# embedding-explorer

./: .gitignore  LICENSE  README.md  mess_around.py  pyproject.toml  reproduce_error.py
docs/: conf.py  dashboards.rst  index.rst  projection_clustering.rst  semantic_networks.rst
docs/_build/doctrees/: dashboards.doctree  environment.pickle  index.doctree  projection_clustering.doctree  semantic_networks.doctree
docs/_build/html/: .buildinfo  dashboards.html  genindex.html  index.html  objects.inv  projection_clustering.html  search.html  searchindex.js  semantic_networks.html
embedding_explorer/: __init__.py  app.py  cards.py  model.py
embedding_explorer/blueprints/: app.py  clustering.py  dashboard.py  explorer.py
embedding_explorer/components/: clustering.py  clustering_settings.py  model_card.py  network.py  plot_settings.py  slider.py  word_selector.py
embedding_explorer/plots/: network.py
embedding_explorer/prepare/: clustering.py  gensim.py  semkern.py  thumbnails.py
