[tool.black]
line-length=79

[tool.ruff]
line-length=79

[tool.poetry]
name = "embedding-explorer"
version = "0.1.2"
description = "Tools for interactive visual inspection of static word embedding models."
authors = ["Márton Kardos <power.up1163@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "embedding_explorer"}]

[tool.poetry.dependencies]
python = ">=3.8.0"
dash = "~2.7.1"
dash-extensions = "~0.1.10"
dash-mantine-components = "~0.11.1"
dash-iconify = "~0.1.2"
scikit-learn = "~1.1.0"
numpy = ">=1.23.0"
pandas = "~1.5.2"
wordcloud = "~1.8.2.2"
neofuzz = ">=0.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
